--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <h1>People Entered:</h1>
     <h2 id="counter">0</h2>
-    <script>
-        document.getElementById("counter").innerText = 7
+    <script src="index.js">
     </script>
 </body>
 </html>
