--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>People Entered:</h1>
     <h2 id="counter">0</h2>
+    <button id="incr-button">Increment</button>
     <script src="index.js">
     </script>
 </body>
