--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>People Entered:</h1>
     <h2 id="counter">0</h2>
-    <button id="incr-button">Increment</button>
+    <button id="incr-button" onclick="increment()">Increment</button>
+    <button id="save-button" onclick="save()">Save</button>
     <script src="index.js">
     </script>
 </body>
